@@ -1,6 +1,15 @@
 CHANGELOG RoundCube Webmail
 ---------------------------
 
+2007/08/09 (thomasb)
+----------
+- Identify mailboxes case-sensitive
+- Sort mailbox list case-insensitive (closes #1484338)
+- Fix display of multipart messages from Apple Mail (closes #1484027)
+- Protect AJAX request from being fetched by a foreign site (XSS)
+- Make autocomplete for loginform configurable by the skin template
+
+
 2007/07/09 (richs)
 ----------
 - Fixed bug with buttons not dimming/enabling properly after switching folders
@@ -12,6 +21,7 @@ CHANGELOG RoundCube Webmail
 - Raised .htaccess upload_max_filesize from 2M to 5M to differ from default php.ini
 - Increased "mailboxcontrols" mail.css width from 160 to 170px to fix non-english languages 
 - Fixed empty-message sending with TinyMCE plain-text mode, or if it's not installed
+
 
 2007/07/03 (thomasb)
 ----------
